Fix project link spacing

--- a/style.css
+++ b/style.css
@@ -51,12 +51,15 @@ p {
 a {
     color: rgb(207, 179, 85);
     text-decoration: none;
-    margin-right: 0.3vw;
 }
 
 a:hover {
     color: rgb(13, 20, 12);
     background-color: rgb(207, 179, 85);
+}
+
+.horizlink {
+    margin-right: 0.3vw;
 }
 
 span {
